--- a/Marble_Solatire.ipynb
+++ b/Marble_Solatire.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOT8UfpIsHs5npQKpa8UqjB",
+      "authorship_tag": "ABX9TyMeFHoY2rzIGLPkUiZ5ZoEi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,55 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "id": "ywfmiM2PCLb6"
-      },
-      "outputs": [],
       "source": [
         "import heapq\n",
-        "from typing import List, Tuple\n",
         "import time\n",
-        "\n",
-        "BOARD_SIZE = 7\n",
-        "E, P, X = 0, 1, -1  # Empty, Peg, Invalid"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "INITIAL_BOARD = [\n",
-        "    [X, X, P, P, P, X, X],\n",
-        "    [X, X, P, P, P, X, X],\n",
-        "    [P, P, P, P, P, P, P],\n",
-        "    [P, P, P, E, P, P, P],\n",
-        "    [P, P, P, P, P, P, P],\n",
-        "    [X, X, P, P, P, X, X],\n",
-        "    [X, X, P, P, P, X, X]\n",
-        "]\n",
-        "\n",
-        "MOVES = [(-2, 0), (2, 0), (0, -2), (0, 2)]"
+        "from collections import deque"
       ],
       "metadata": {
-        "id": "tY5M5Ljnljpc"
-      },
-      "execution_count": 2,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "class State:\n",
-        "    def __init__(self, board: List[List[int]], pegs: int, moves: List[Tuple[int, int, int, int]]):\n",
-        "        self.board = board\n",
-        "        self.pegs = pegs\n",
-        "        self.moves = moves\n",
-        "\n",
-        "    def __lt__(self, other):\n",
-        "        return self.pegs < other.pegs"
-      ],
-      "metadata": {
-        "id": "G-1_sAv5SDoY"
+        "id": "MocuRKqlqQWQ"
       },
       "execution_count": 3,
       "outputs": []
@@ -84,14 +42,21 @@
     {
       "cell_type": "code",
       "source": [
-        "def is_valid_move(board: List[List[int]], row: int, col: int, move: Tuple[int, int]) -> bool:\n",
-        "    nr, nc = row + move[0], col + move[1]\n",
-        "    mr, mc = row + move[0] // 2, col + move[1] // 2\n",
-        "    return (0 <= nr < BOARD_SIZE and 0 <= nc < BOARD_SIZE and\n",
-        "            board[row][col] == P and board[mr][mc] == P and board[nr][nc] == E)"
+        "class Node:\n",
+        "    def __init__(self, board, g=0, h=0, path=None):\n",
+        "        self.board = board\n",
+        "        self.g = g\n",
+        "        self.h = h\n",
+        "        self.f = g + h\n",
+        "        self.path = path if path is not None else []\n",
+        "\n",
+        "    def __lt__(self, other):\n",
+        "        return self.f < other.f\n",
+        "\n",
+        "directions = [(0, -2), (0, 2), (2, 0), (-2, 0)]"
       ],
       "metadata": {
-        "id": "iGx6uAN2SGXB"
+        "id": "MAZ9f5rzuzgp"
       },
       "execution_count": 4,
       "outputs": []
@@ -99,16 +64,21 @@
     {
       "cell_type": "code",
       "source": [
-        "def make_move(board: List[List[int]], row: int, col: int, move: Tuple[int, int]) -> List[List[int]]:\n",
+        "def is_valid(board, x, y, dx, dy):\n",
+        "    if 0 <= x + dx < 7 and 0 <= y + dy < 7 and board[x][y] == 1:\n",
+        "        if board[x + dx // 2][y + dy // 2] == 1 and board[x + dx][y + dy] == 0:\n",
+        "            return True\n",
+        "    return False\n",
+        "\n",
+        "def apply_move(board, x, y, dx, dy):\n",
         "    new_board = [row[:] for row in board]\n",
-        "    nr, nc = row + move[0], col + move[1]\n",
-        "    mr, mc = row + move[0] // 2, col + move[1] // 2\n",
-        "    new_board[row][col] = new_board[mr][mc] = E\n",
-        "    new_board[nr][nc] = P\n",
+        "    new_board[x][y] = 0\n",
+        "    new_board[x + dx // 2][y + dy // 2] = 0\n",
+        "    new_board[x + dx][y + dy] = 1\n",
         "    return new_board"
       ],
       "metadata": {
-        "id": "rBWFnRsGSJN3"
+        "id": "oBZZSPF-u3EG"
       },
       "execution_count": 5,
       "outputs": []
@@ -116,13 +86,11 @@
     {
       "cell_type": "code",
       "source": [
-        "def get_successors(state: State) -> List[State]:\n",
-        "    return [State(make_move(state.board, r, c, m), state.pegs - 1, state.moves + [(r, c, r + m[0], c + m[1])])\n",
-        "            for r in range(BOARD_SIZE) for c in range(BOARD_SIZE) for m in MOVES\n",
-        "            if is_valid_move(state.board, r, c, m)]"
+        "def num_marbles(board):\n",
+        "    return sum(row.count(1) for row in board)"
       ],
       "metadata": {
-        "id": "RSKaTUwISLsE"
+        "id": "RhwLLPEHu7bj"
       },
       "execution_count": 6,
       "outputs": []
@@ -130,11 +98,27 @@
     {
       "cell_type": "code",
       "source": [
-        "def is_goal_state(state: State) -> bool:\n",
-        "    return state.pegs == 1"
+        "def manhattan_heuristic(board):\n",
+        "    center = (3, 3)\n",
+        "    distance = 0\n",
+        "    for i in range(len(board)):\n",
+        "        for j in range(len(board[i])):\n",
+        "            if board[i][j] == 1:\n",
+        "                distance += abs(i - center[0]) + abs(j - center[1])\n",
+        "    return distance\n",
+        "\n",
+        "def exponential_heuristic(board):\n",
+        "    center = (3, 3)\n",
+        "    exp_distance = 0\n",
+        "    for i in range(len(board)):\n",
+        "        for j in range(len(board[i])):\n",
+        "            if board[i][j] == 1:\n",
+        "                d = max(abs(i - center[0]), abs(j - center[1]))\n",
+        "                exp_distance += 2 ** d\n",
+        "    return exp_distance"
       ],
       "metadata": {
-        "id": "ImyEC7z2SOgM"
+        "id": "SbZphLECu_Rc"
       },
       "execution_count": 7,
       "outputs": []
@@ -142,14 +126,23 @@
     {
       "cell_type": "code",
       "source": [
-        "def heuristic1(state: State) -> int:\n",
-        "    return state.pegs - 1\n",
+        "def get_successors(node):\n",
+        "    successors = []\n",
+        "    for x in range(7):\n",
+        "        for y in range(7):\n",
+        "            if node.board[x][y] == 1:\n",
+        "                for dx, dy in directions:\n",
+        "                    if is_valid(node.board, x, y, dx, dy):\n",
+        "                        new_board = apply_move(node.board, x, y, dx, dy)\n",
+        "                        successor_node = Node(new_board, g=node.g+1, path=node.path + [(x, y, x + dx, y + dy)])\n",
+        "                        successors.append(successor_node)\n",
+        "    return successors\n",
         "\n",
-        "def heuristic2(state: State) -> int:\n",
-        "    return sum(abs(r - 3) + abs(c - 3) for r in range(BOARD_SIZE) for c in range(BOARD_SIZE) if state.board[r][c] == P)"
+        "def is_goal_state(board):\n",
+        "    return num_marbles(board) == 1 and board[3][3] == 1"
       ],
       "metadata": {
-        "id": "G4A0d8vrSQqD"
+        "id": "OY-7LoM0vCsX"
       },
       "execution_count": 8,
       "outputs": []
@@ -157,38 +150,29 @@
     {
       "cell_type": "code",
       "source": [
-        "def search(initial_state: State, heuristic, search_type: str) -> Tuple[State, int, int]:\n",
-        "    frontier = [(heuristic(initial_state), 0, initial_state)]\n",
-        "    explored = set()\n",
+        "def best_first_search(start_board, heuristic_func):\n",
+        "    start_node = Node(start_board)\n",
+        "    frontier = [(heuristic_func(start_board), start_node)]\n",
+        "    visited = set()\n",
         "    nodes_expanded = 0\n",
         "\n",
         "    while frontier:\n",
-        "        _, g, current_state = heapq.heappop(frontier)\n",
-        "\n",
-        "        if is_goal_state(current_state):\n",
-        "            return current_state, nodes_expanded, len(explored)\n",
-        "\n",
-        "        board_tuple = tuple(map(tuple, current_state.board))\n",
-        "        if board_tuple in explored:\n",
-        "            continue\n",
-        "\n",
-        "        explored.add(board_tuple)\n",
+        "        _, current_node = heapq.heappop(frontier)\n",
         "        nodes_expanded += 1\n",
         "\n",
-        "        for successor in get_successors(current_state):\n",
-        "            h = heuristic(successor)\n",
-        "            if search_type == 'a_star':\n",
-        "                f = g + 1 + h\n",
-        "            elif search_type == 'best_first':\n",
-        "                f = h\n",
-        "            else:\n",
-        "                f = successor.pegs\n",
-        "            heapq.heappush(frontier, (f, g + 1, successor))\n",
+        "        if is_goal_state(current_node.board):\n",
+        "            return current_node.path, nodes_expanded\n",
         "\n",
-        "    return None, nodes_expanded, len(explored)"
+        "        board_tuple = tuple(map(tuple, current_node.board))\n",
+        "        if board_tuple not in visited:\n",
+        "            visited.add(board_tuple)\n",
+        "            for successor in get_successors(current_node):\n",
+        "                heapq.heappush(frontier, (heuristic_func(successor.board), successor))\n",
+        "\n",
+        "    return None, nodes_expanded"
       ],
       "metadata": {
-        "id": "f0HO763iSS6G"
+        "id": "fkCAha1jvG3z"
       },
       "execution_count": 9,
       "outputs": []
@@ -196,20 +180,31 @@
     {
       "cell_type": "code",
       "source": [
-        "def print_results(algorithm_name: str, result: Tuple[State, int, int], execution_time: float):\n",
-        "    solution, nodes_expanded, explored_states = result\n",
-        "    if solution:\n",
-        "        print(f\"{algorithm_name}:\")\n",
-        "        print(f\"  Moves: {len(solution.moves)}\")\n",
-        "        print(f\"  Nodes expanded: {nodes_expanded}\")\n",
-        "        print(f\"  States explored: {explored_states}\")\n",
-        "        print(f\"  Execution time: {execution_time:.4f} seconds\")\n",
-        "    else:\n",
-        "        print(f\"{algorithm_name} did not find a solution.\")\n",
-        "    print()"
+        "def a_star_search(start_board, heuristic_func):\n",
+        "    start_node = Node(start_board, h=heuristic_func(start_board))\n",
+        "    frontier = [(start_node.f, start_node)]\n",
+        "    visited = set()\n",
+        "    nodes_expanded = 0\n",
+        "\n",
+        "    while frontier:\n",
+        "        _, current_node = heapq.heappop(frontier)\n",
+        "        nodes_expanded += 1\n",
+        "\n",
+        "        if is_goal_state(current_node.board):\n",
+        "            return current_node.path, nodes_expanded\n",
+        "\n",
+        "        board_tuple = tuple(map(tuple, current_node.board))\n",
+        "        if board_tuple not in visited:\n",
+        "            visited.add(board_tuple)\n",
+        "            for successor in get_successors(current_node):\n",
+        "                successor.h = heuristic_func(successor.board)\n",
+        "                successor.f = successor.g + successor.h\n",
+        "                heapq.heappush(frontier, (successor.f, successor))\n",
+        "\n",
+        "    return None, nodes_expanded"
       ],
       "metadata": {
-        "id": "I-9oys2ASV61"
+        "id": "LMMuHvQHvKBn"
       },
       "execution_count": 10,
       "outputs": []
@@ -217,25 +212,29 @@
     {
       "cell_type": "code",
       "source": [
-        "def main():\n",
-        "    initial_state = State(INITIAL_BOARD, sum(row.count(P) for row in INITIAL_BOARD), [])\n",
+        "def uniform_cost_search(start_board):\n",
+        "    start_node = Node(start_board)\n",
+        "    frontier = [(0, start_node)]\n",
+        "    visited = set()\n",
+        "    nodes_expanded = 0\n",
         "\n",
-        "    algorithms = [\n",
-        "        (\"Priority Queue Search\", lambda s: search(s, heuristic1, 'priority_queue')),\n",
-        "        (\"Best-First Search (h1)\", lambda s: search(s, heuristic1, 'best_first')),\n",
-        "        (\"Best-First Search (h2)\", lambda s: search(s, heuristic2, 'best_first')),\n",
-        "        (\"A* Search (h1)\", lambda s: search(s, heuristic1, 'a_star')),\n",
-        "        (\"A* Search (h2)\", lambda s: search(s, heuristic2, 'a_star'))\n",
-        "    ]\n",
+        "    while frontier:\n",
+        "        _, current_node = heapq.heappop(frontier)\n",
+        "        nodes_expanded += 1\n",
         "\n",
-        "    for name, algorithm in algorithms:\n",
-        "        start_time = time.time()\n",
-        "        result = algorithm(initial_state)\n",
-        "        execution_time = time.time() - start_time\n",
-        "        print_results(name, result, execution_time)"
+        "        if is_goal_state(current_node.board):\n",
+        "            return current_node.path, nodes_expanded\n",
+        "\n",
+        "        board_tuple = tuple(map(tuple, current_node.board))\n",
+        "        if board_tuple not in visited:\n",
+        "            visited.add(board_tuple)\n",
+        "            for successor in get_successors(current_node):\n",
+        "                heapq.heappush(frontier, (successor.g, successor))\n",
+        "\n",
+        "    return None, nodes_expanded"
       ],
       "metadata": {
-        "id": "_5tAOiSsSXoQ"
+        "id": "dmxGYRkQvMW1"
       },
       "execution_count": 11,
       "outputs": []
@@ -243,43 +242,66 @@
     {
       "cell_type": "code",
       "source": [
-        "if __name__ == \"__main__\":\n",
-        "    main()"
+        "def compare_algorithms(initial_board):\n",
+        "    algorithms = [\n",
+        "        (\"Best First Search (Manhattan)\", lambda b: best_first_search(b, manhattan_heuristic)),\n",
+        "        (\"Best First Search (Exponential)\", lambda b: best_first_search(b, exponential_heuristic)),\n",
+        "        (\"A* (Manhattan)\", lambda b: a_star_search(b, manhattan_heuristic)),\n",
+        "        (\"A* (Exponential)\", lambda b: a_star_search(b, exponential_heuristic)),\n",
+        "        (\"Priority Queue Search\", lambda b: uniform_cost_search(b))\n",
+        "    ]\n",
+        "\n",
+        "    results = []\n",
+        "\n",
+        "    for name, algo in algorithms:\n",
+        "        start_time = time.time()\n",
+        "        solution, nodes_expanded = algo(initial_board)\n",
+        "        end_time = time.time()\n",
+        "\n",
+        "        results.append({\n",
+        "            \"name\": name,\n",
+        "            \"solution\": solution,\n",
+        "            \"nodes_expanded\": nodes_expanded,\n",
+        "            \"time\": end_time - start_time\n",
+        "        })\n",
+        "\n",
+        "    return results"
       ],
       "metadata": {
-        "id": "CduwHdrUSaVM",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6bf7f016-3d29-49ae-f0d8-a332a3be4973"
+        "id": "GzXwgrkxvPBv"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "initial_board = [\n",
+        "    [-1, -1, 1, 1, 1, -1, -1],\n",
+        "    [-1, -1, 1, 1, 1, -1, -1],\n",
+        "    [1, 1, 1, 1, 1, 1, 1],\n",
+        "    [1, 1, 1, 0, 1, 1, 1],\n",
+        "    [1, 1, 1, 1, 1, 1, 1],\n",
+        "    [-1, -1, 1, 1, 1, -1, -1],\n",
+        "    [-1, -1, 1, 1, 1, -1, -1]\n",
+        "]\n",
+        "\n",
+        "results = compare_algorithms(initial_board)\n",
+        "\n",
+        "for result in results:\n",
+        "    print(f\"\\n{result['name']}:\")\n",
+        "    print(f\"  Solution found: {'Yes' if result['solution'] else 'No'}\")\n",
+        "    print(f\"  Nodes expanded: {result['nodes_expanded']}\")\n",
+        "    print(f\"  Time taken: {result['time']:.2f} seconds\")\n",
+        "    if result['solution']:\n",
+        "        print(f\"  Solution length: {len(result['solution'])} moves\")\n",
+        "        print(f\"  Solution path: {result['solution']}\")"
+      ],
+      "metadata": {
+        "id": "b9_2TBxNvRls"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Priority Queue Search:\n",
-            "  Moves: 31\n",
-            "  Nodes expanded: 11426\n",
-            "  States explored: 11426\n",
-            "  Execution time: 3.4096 seconds\n",
-            "\n",
-            "Best-First Search (h1):\n",
-            "  Moves: 31\n",
-            "  Nodes expanded: 11426\n",
-            "  States explored: 11426\n",
-            "  Execution time: 2.2350 seconds\n",
-            "\n",
-            "Best-First Search (h2):\n",
-            "  Moves: 31\n",
-            "  Nodes expanded: 139533\n",
-            "  States explored: 139533\n",
-            "  Execution time: 37.2171 seconds\n",
-            "\n"
-          ]
-        }
-      ]
+      "outputs": []
     }
   ]
 }
